--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.TestCases.Tc_01_ValidateSigin_Page" hash-for-method="TestSignIn">TestSignIn</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.TestCases.Tc_02_RegisterNewUser" hash-for-method="TestSignIn">TestSignIn</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -120,7 +120,7 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.TestCases.Tc_01_ValidateSigin_Page</span>
+              <span class="class-name">com.TestCases.Tc_02_RegisterNewUser</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -142,9 +142,12 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;com.Listners.Listners&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.TestCases.Tc_01_ValidateSigin_Page&quot;/&gt;
+      &lt;class name=&quot;com.TestCases.Tc_02_RegisterNewUser&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -187,13 +190,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TestSignIn')
-data.setCell(0, 2, 'com.TestCases.Tc_01_ValidateSigin_Page')
-data.setCell(0, 3, 45487);
+data.setCell(0, 2, 'com.TestCases.Tc_02_RegisterNewUser')
+data.setCell(0, 3, 49834);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 seconds</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -219,7 +222,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.TestCases.Tc_01_ValidateSigin_Page</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.TestCases.Tc_02_RegisterNewUser</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">TestSignIn</span>
                 <span class="method-start">0 ms</span>
